# franzi

./: .travis.yml  Cargo.toml  Readme.md  protocol.html  protocol.txt
franz-base/: Cargo.toml
franz-base/src/: lib.rs  types.rs
franz-derive/: Cargo.toml
franz-macros/: Cargo.toml
franz-macros/src/: lib.rs
franz-macros/tests/: message.rs  message_macro_test.rs
franz-proto/: Cargo.toml
franz-proto/src/: api_versions.rs  errors.rs  header.rs  lib.rs
franz-proto/src/messages/: api_versions.rs  find_coordinator.rs  list_offsets.rs  metadata.rs  mod.rs  offset_fetch.rs
franzi-base/: Cargo.toml
franzi-base/src/: lib.rs  types.rs  varint.rs
franzi-client/: Cargo.toml
franzi-client/src/: broker.rs  lib.rs
franzi-macros/: Cargo.toml
franzi-macros/src/: lib.rs
franzi-macros/tests/: message_macro_test.rs
franzi-proto/: Cargo.toml
franzi-proto/src/: errors.rs  exchange.rs  header.rs  lib.rs  messageset_v0.rs  messageset_v1.rs  record.rs
franzi-proto/src/messages/: add_offsets_to_txn.rs  add_partition_to_txn.rs  alter_configs.rs  alter_replica_log_dirs.rs  api_versions.rs  controlled_shutdown.rs  create_acls.rs  create_topics.rs  delete_acls.rs  delete_records.rs  delete_topics.rs  describe_acls.rs  describe_configs.rs  describe_groups.rs  end_txn.rs  fetch.rs  find_coordinator.rs  heartbeat.rs  init_producer_id.rs  join_group.rs  leader_and_isr.rs  leave_group.rs  list_groups.rs  list_offsets.rs  metadata.rs  mod.rs  offset_commit.rs  offset_fetch.rs  offset_for_leader_epoch.rs  sasl_handshake.rs  stop_replica.rs  sync_group.rs  txn_offset_commit.rs  update_metadata.rs  write_txn_markers.rs
src/: api_keys.rs  api_versions.rs  header.rs  lib.rs  types.rs
