[package]
name = "franz-macros"
version = "0.1.0"
authors = ["Kosta Welke <kw@trinatives.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6.3"
proc-macro2 = "0.4.25"
lazy_static = "1.2.0"

[dev-dependencies]
franz-base = { path = "../franz-base" }
bytes = "0.4.11"
