[package]
name = "franzi-client"
version = "0.1.0"
authors = ["Kosta Welke <kw@trinatives.com>"]
edition = "2018"

[dependencies]
franzi-base = { path = "../franzi-base" }
franzi-proto = { path = "../franzi-proto" }
bytes = "0.5"
tokio = { version="0.2", features=["tcp", "io-util", "time", "rt-core", "dns", "macros"] }
tokio-util = { version="0.3.1", features=["codec"]}
futures = "0.3"
rand = "0.7.3"
chashmap = "2.2.2"
debug_stub_derive = "0.3"
tracing = "0.1.12"
tracing-subscriber = "0.2"
tracing-futures = { version="0.2", default-features = false, features=["futures-03"] }
bstr = "0.2"
structopt = "0.3.17"
