[package]
name = "franzi-client"
version = "0.1.0"
authors = ["Kosta Welke <kw@trinatives.com>"]
edition = "2018"

[dependencies]
franzi-base = { path = "../franzi-base" }
franzi-proto = { path = "../franzi-proto" }
bytes = "1"
tokio = { version="1", features=["io-util", "time", "rt-multi-thread", "macros", "net"] }
tokio-util = { version="0.6", features=["codec"]}
futures = "0.3"
rand = "0.8"
chashmap = "2.2.2"
debug_stub_derive = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = { version="0.2", default-features = false, features=["futures-03"] }
bstr = "0.2"
structopt = "0.3"
