[package]
name = "franzi-proto"
version = "0.1.0"
authors = ["Kosta Welke <kw@trinatives.com>"]
edition = "2018"

[dependencies]
franzi-base = { path = "../franzi-base" }
franzi-macros = { path = "../franzi-macros" }
tokio = "0.2.0-alpha.6"
futures-preview = "0.3.0-alpha.19"
bytes = "0.4.11"
byteorder = "1.2.7"
lazy_static = "1.4.0"
flate2 = "1.0.12"
snap = "0.2.5"
lz4 = "1.23.1"
