[package]
name = "franzi-proto"
version = "0.1.0"
authors = ["Kosta Welke <kw@trinatives.com>"]
edition = "2018"

[dependencies]
franzi-base = { path = "../franzi-base" }
franzi-macros = { path = "../franzi-macros" }
tokio = "1"
futures = "0.3"
bytes = "1"
tracing = "0.1"

# For Compression
flate2 = "1"
snap = "1"
lz4 = "1"
zstd = "0.6"

[dev-dependencies]
lazy_static = "1"
